Bug 245211 - Reconciling an account overrides the online statement balance information in the ledger
Summary: Reconciling an account overrides the online statement balance information in ...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-20 10:12 UTC by Thomas Baumgart
Modified: 2010-07-24 10:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2010-07-20 10:12:54 UTC
Version:           unspecified (using KDE 4.3.5) 
OS:                Linux

The group header shown in the ledger for the last online statement balance is overridden when reconciling the account against an older statement.

Reproducible: Always

Steps to Reproduce:
Turn on the 'show group header between transactions' option

Download the latest statement data

Reconcile account based on older statement (I had about 10 days between statement date and last online update) with a different balance than that shown for the last online update

Actual Results:  
Online statement balance shows the balance of the last reconciliation

Expected Results:  
Online statement balance is not altered

Workaround: run the online update again.
Comment 1 Thomas Baumgart 2010-07-24 10:51:40 UTC
SVN commit 1153941 by tbaumgart:

Don't override online statement balance with statement balance used during reconciliation in case it is newer.

BUG: 245211

 M  +8 -0      kmymoney.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1153941