Don't override online statement balance with statement balance used during reconciliation in case it is newer.

BUG: 245211

svn path=/trunk/extragear/office/kmymoney/; revision=1153941